upd many new changes 2

--- a/site/equipments-gm.html
+++ b/site/equipments-gm.html
@@ -363,14 +363,21 @@
                 <li><a href="#">О проекте</a></li>
               </ul>
             </div>
-            <div class="user">
+            <div class="user js-usermenu">
               <div class="name"><a href="#"> 
                   <div class="title">Алексей Петров</div>
                   <div class="email">petrov.i1975@mail.ru</div></a></div>
               <div class="pic">
                 <div class="ava"><img src="img/content/ava-1.png" alt=""></div>
                 <div class="count"><a href="#">9</a></div>
+                <div class="arrow"></div>
               </div>
+              <ul class="user-drop js-usermenu-drop">
+                <li class="user-drop__link user-drop__link_work"><a href="#">Рабочая область</a></li>
+                <li class="user-drop__link user-drop__link_request"><a href="#">Заявки</a></li>
+                <li class="user-drop__link user-drop__link_messages"><a href="#">Сообщения</a></li>
+                <li class="user-drop__link user-drop__link_notifyc"><a href="#">Уведомления<span class="count"><i>9 </i></span></a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -416,16 +423,14 @@
                     <div class="tags"><a href="#" class="tags-item js-open-coming-soon"><span class="name">Машиностроение</span><span class="count empty"></span></a><a href="#" class="tags-item js-open-coming-soon"><span class="name">Металлообработка</span><span class="count">388</span></a></div>
                   </div>
                   <div class="iprev"><img src="img/content/equip-1.jpg" alt=""></div>
-                  <p class="grey-without-strong"><strong>Назначение <br></strong>Изготовление деталей типа тел вращения</p>
-                  <p class="grey-without-strong"><strong>Описание <br></strong>Прецизионный токарный станок с ЧПУ выполнен по прогрессивной схеме компоновки с расположением револьверной головки на наклонных направляющих, что увеличивает жесткость конструкции, позволяет уменьшить размеры станка по ширине и оптимально распределить по направляющим нагрузки, образующиеся в процессе резания.</p>
-                  <p class="grey-without-strong"><strong>Основные характеристики <br></strong>Наибольший диаметр обрабатываемого изделия – 600 мм <br>Число управляемых координат – 2</p>
-                  <p class="grey-without-strong"><strong>Год выпуска: </strong>2012</p>
-                  <p class="grey-without-strong"><strong>Производитель: </strong>SOMAB, Франция</p>
-                  <p class="grey-without-strong"><strong>Состоаяние: </strong>новый</p>
-                  <p class="grey-without-strong"><strong>Порядок предоставления услуг по доступу к оборудованию: <br></strong>Передача в собственность </p>
-                  <p class="grey-without-strong"><strong>Организация (ВУЗ / ГНЦ): </strong>Национальный исследовательский Томский политехнический университет</p>
-                  <p>&nbsp;</p>
                 </div>
+                <p class="grey-without-strong"><strong>Назначение <br></strong>Изготовление деталей типа тел вращения</p>
+                <p class="grey-without-strong"><strong>Описание <br></strong>Прецизионный токарный станок с ЧПУ выполнен по прогрессивной схеме компоновки с расположением револьверной головки на наклонных направляющих, что увеличивает жесткость конструкции, позволяет уменьшить размеры станка по ширине и оптимально распределить по направляющим нагрузки, образующиеся в процессе резания.</p>
+                <p class="grey-without-strong"><strong>Основные характеристики <br></strong>Наибольший диаметр обрабатываемого изделия – 600 мм <br>Число управляемых координат – 2</p>
+                <p class="grey-without-strong"><strong>Год выпуска: </strong>2012</p>
+                <p class="grey-without-strong"><strong>Производитель:</strong>SOMAB, Франция</p>
+                <p class="grey-without-strong"><strong>Контакты: </strong>+7 495 342-3424, mail@mail.ru</p>
+                <p>&nbsp;</p>
                 <div class="inline"><a href="#" class="btn-orange-wide inline">Одобрить</a><a href="#reasons-refusal" class="btn-grey-wide">Отклонить</a></div>
               </div>
             </div>
