--- a/site/equipments-item.html
+++ b/site/equipments-item.html
@@ -360,14 +360,21 @@
                 <li><a href="#">О проекте</a></li>
               </ul>
             </div>
-            <div class="user">
+            <div class="user js-usermenu">
               <div class="name"><a href="#"> 
                   <div class="title">Алексей Петров</div>
                   <div class="email">petrov.i1975@mail.ru</div></a></div>
               <div class="pic">
                 <div class="ava"><img src="img/content/ava-1.png" alt=""></div>
                 <div class="count"><a href="#">9</a></div>
+                <div class="arrow"></div>
               </div>
+              <ul class="user-drop js-usermenu-drop">
+                <li class="user-drop__link user-drop__link_work"><a href="#">Рабочая область</a></li>
+                <li class="user-drop__link user-drop__link_request"><a href="#">Заявки</a></li>
+                <li class="user-drop__link user-drop__link_messages"><a href="#">Сообщения</a></li>
+                <li class="user-drop__link user-drop__link_notifyc"><a href="#">Уведомления<span class="count"><i>9 </i></span></a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -404,17 +411,15 @@
                     <div class="tags"><a href="#" class="tags-item js-open-coming-soon"><span class="name">Машиностроение</span><span class="count empty"></span></a><a href="#" class="tags-item js-open-coming-soon"><span class="name">Металлообработка</span><span class="count">388</span></a></div>
                   </div>
                   <div class="iprev"><img src="img/content/equip-1.jpg" alt=""></div>
-                  <p class="grey-without-strong"><strong>Назначение <br></strong>Изготовление деталей типа тел вращения</p>
-                  <p class="grey-without-strong"><strong>Описание <br></strong>Прецизионный токарный станок с ЧПУ выполнен по прогрессивной схеме компоновки с расположением револьверной головки на наклонных направляющих, что увеличивает жесткость конструкции, позволяет уменьшить размеры станка по ширине и оптимально распределить по направляющим нагрузки, образующиеся в процессе резания.</p>
-                  <p class="grey-without-strong"><strong>Основные характеристики <br></strong>Наибольший диаметр обрабатываемого изделия – 600 мм <br>Число управляемых координат – 2</p>
-                  <p class="grey-without-strong"><strong>Год выпуска: </strong>2012</p>
-                  <p class="grey-without-strong"><strong>Производитель: </strong>SOMAB, Франция</p>
-                  <p class="grey-without-strong"><strong>Состоаяние: </strong>новый</p>
-                  <p class="grey-without-strong"><strong>Порядок предоставления услуг по доступу к оборудованию: <br></strong>Передача в собственность </p>
-                  <p class="grey-without-strong"><strong>Организация (ВУЗ / ГНЦ): </strong>Национальный исследовательский Томский политехнический университет</p>
                 </div>
+                <p class="grey-without-strong"><strong>Назначение <br></strong>Изготовление деталей типа тел вращения</p>
+                <p class="grey-without-strong"><strong>Описание <br></strong>Прецизионный токарный станок с ЧПУ выполнен по прогрессивной схеме компоновки с расположением револьверной головки на наклонных направляющих, что увеличивает жесткость конструкции, позволяет уменьшить размеры станка по ширине и оптимально распределить по направляющим нагрузки, образующиеся в процессе резания.</p>
+                <p class="grey-without-strong"><strong>Основные характеристики <br></strong>Наибольший диаметр обрабатываемого изделия – 600 мм <br>Число управляемых координат – 2</p>
+                <p class="grey-without-strong"><strong>Год выпуска: </strong>2012</p>
+                <p class="grey-without-strong"><strong>Производитель:</strong>SOMAB, Франция</p>
+                <p class="grey-without-strong"><strong>Организация (ВУЗ / ГНЦ): </strong>Национальный исследовательский Томский политехнический университет</p>
               </div>
-              <div class="order-service-cont"><a href="#" class="btn-orange-wide inline js-open-coming-soon width240">Заказать</a><a href="#" class="btn-grey-dashed js-show-contacts width240">Показать контакты</a>
+              <div class="order-service-cont"><a href="#" class="btn-orange inline js-open-coming-soon">Заказать</a><a href="#" class="btn-grey-dashed js-show-contacts">Показать контакты</a>
                 <div class="contacts js-contacts-box"><span class="phone">+7 495 675 87 98</span><span class="email"><a href="#">email@email.com</a></span></div>
               </div>
               <div class="bmetabot">
@@ -452,7 +457,7 @@
                           <p> <strong class="reg-black">Организация (ВУЗ / ГНЦ): </strong>ООО «Лаборатории АМФОРА»</p>
                         </div>
                         <div class="tags"><a href="#" class="tags-item js-open-coming-soon"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
-                        <div class="order-service"><a href="#" class="btn-orange width175">Заказать</a></div>
+                        <div class="order-service"><a href="#" class="btn-orange">Заказать</a></div>
                         <div class="imeta">
                           <div class="right mar-top-20m">
                             <div class="comments"><a href="#">51</a></div>
@@ -479,7 +484,7 @@
                           <p> <strong class="reg-black">Организация (ВУЗ / ГНЦ): </strong>ООО «Лаборатории АМФОРА»</p>
                         </div>
                         <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
-                        <div class="order-service"><a href="#" class="btn-orange width175">Заказать</a></div>
+                        <div class="order-service"><a href="#" class="btn-orange">Заказать</a></div>
                         <div class="imeta">
                           <div class="right mar-top-20m">
                             <div class="comments"><a href="#">51</a></div>
