--- a/site/ntp.html
+++ b/site/ntp.html
@@ -382,58 +382,192 @@
         <div class="main-width main-wrap">
           <div class="pathway">
             <ul>
-              <li><a href="#">Уведомления</a></li>
+              <li><a href="#">РЫНОК УСЛУГ</a></li>
+              <li>></li>
+              <li><a href="#">объекты нтп </a></li>
             </ul>
           </div>
-          <div class="main-full">
-            <div class="notifybox">
-              <div class="notify">
-                <div class="notify-prev"><img src="img/content/edit-page/1.png" alt=""></div>
-                <div class="notify-meta"> 
-                  <div class="date">13 октября 2014</div>
-                  <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
-                  <div class="cat">в разделе «Программное обеспечение»</div>
+          <div class="page-name">
+            <h1>Объекты НТП</h1>
+            <p>Рынок услуг по инжинирингу и промдизайну</p>
+          </div>
+          <div class="main-left">
+            <div class="search-con">
+              <form action="#">
+                <input type="text" placeholder="Быстрый поиск по объектам НТП" class="inp-text">
+                <input type="submit" value="" class="inp-submit">
+              </form>
+            </div>
+            <div class="box-articles">
+              <div class="heading">
+                <div class="heading-left_sort">Сортировать по:						</div>
+                <div class="heading-right_sort"><a href="#" class="active">
+                     
+                    Пользовательскому рейтингу <span></span></a><a href="#">
+                     
+                    Названию организации<span> </span></a></div>
+              </div>
+              <div class="item">
+                <div class="iprev"><img src="img/content/180-135-3.jpg" alt=""/></div>
+                <div class="icon">
+                  <div class="iname"><a href="#">Автолаборатория для проведения энергетического обследования на базе ГАЗ-27527 </a></div>
+                  <div class="irating mar-bot-10">
+                    <ul>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li></li>
+                      <li></li>
+                    </ul>
+                  </div>
+                  <div class="itext"> 
+                    <div class="con-dess-lines_small">
+                      <p><strong>Организация (ВУЗ / ГНЦ): </strong>Национальный исследовательский Томский политехнический университет</p>
+                      <p><strong>Содержание: </strong>текст</p>
+                      <p><strong>Основные характеристики: </strong>текст</p>
+                      <p><strong>Порядок получения услуг: </strong>получение в собственность</p>
+                    </div>
+                  </div>
+                  <div class="tags"><a href="#" class="tags-item"><span class="name">Металлообратобка</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                  <div class="order-service"><a href="#" class="btn-orange">Заказать НТП</a></div>
+                  <div class="imeta">
+                    <div class="right mar-top-20m">
+                      <div class="comments"><a href="#">51</a></div>
+                      <div class="views"><a href="#">225</a></div>
+                    </div>
+                  </div>
                 </div>
               </div>
-              <div class="notify">
-                <div class="notify-prev"><img src="img/content/edit-page/2.png" alt=""></div>
-                <div class="notify-meta"> 
-                  <div class="date">13 октября 2014</div>
-                  <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
-                  <div class="cat">в разделе «Программное обеспечение»</div>
+              <div class="item">
+                <div class="iprev"><img src="img/content/180-135-4.jpg" alt=""/></div>
+                <div class="icon">
+                  <div class="iname"><a href="#">Автомат установки компонентов: АРС L40 </a></div>
+                  <div class="irating mar-bot-10">
+                    <ul>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li></li>
+                      <li></li>
+                    </ul>
+                  </div>
+                  <div class="itext"> 
+                    <div class="con-dess-lines_small">
+                      <p><strong>Организация (ВУЗ / ГНЦ): </strong>Национальный исследовательский Томский политехнический университет</p>
+                      <p><strong>Содержание: </strong>текст</p>
+                      <p><strong>Основные характеристики: </strong>текст</p>
+                      <p><strong>Порядок получения услуг: </strong>получение в собственность</p>
+                    </div>
+                  </div>
+                  <div class="tags"><a href="#" class="tags-item"><span class="name">Металлообратобка</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                  <div class="order-service"><a href="#" class="btn-orange">Заказать НТП</a></div>
+                  <div class="imeta">
+                    <div class="right mar-top-20m">
+                      <div class="comments"><a href="#">51</a></div>
+                      <div class="views"><a href="#">225</a></div>
+                    </div>
+                  </div>
                 </div>
               </div>
-              <div class="notify">
-                <div class="notify-prev"><img src="img/content/edit-page/1.png" alt=""></div>
-                <div class="notify-meta"> 
-                  <div class="date">13 октября 2014</div>
-                  <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
-                  <div class="cat">в разделе «Программное обеспечение»</div>
+              <div class="item">
+                <div class="iprev"><img src="img/content/180-135-3.jpg" alt=""/></div>
+                <div class="icon">
+                  <div class="iname"><a href="#">Автолаборатория для проведения энергетического обследования на базе ГАЗ-27527 </a></div>
+                  <div class="irating mar-bot-10">
+                    <ul>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li></li>
+                      <li></li>
+                    </ul>
+                  </div>
+                  <div class="itext"> 
+                    <div class="con-dess-lines_small">
+                      <p><strong>Организация (ВУЗ / ГНЦ): </strong>Национальный исследовательский Томский политехнический университет</p>
+                      <p><strong>Содержание: </strong>текст</p>
+                      <p><strong>Основные характеристики: </strong>текст</p>
+                      <p><strong>Порядок получения услуг: </strong>получение в собственность</p>
+                    </div>
+                  </div>
+                  <div class="tags"><a href="#" class="tags-item"><span class="name">Металлообратобка</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                  <div class="order-service"><a href="#" class="btn-orange">Заказать НТП</a></div>
+                  <div class="imeta">
+                    <div class="right mar-top-20m">
+                      <div class="comments"><a href="#">51</a></div>
+                      <div class="views"><a href="#">225</a></div>
+                    </div>
+                  </div>
                 </div>
               </div>
-              <div class="notify">
-                <div class="notify-prev"><img src="img/content/edit-page/2.png" alt=""></div>
-                <div class="notify-meta"> 
-                  <div class="date">13 октября 2014</div>
-                  <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
-                  <div class="cat">в разделе «Программное обеспечение» </div>
+              <div class="item">
+                <div class="iprev"><img src="img/content/180-135-4.jpg" alt=""/></div>
+                <div class="icon">
+                  <div class="iname"><a href="#">Автомат установки компонентов: АРС L40 </a></div>
+                  <div class="irating mar-bot-10">
+                    <ul>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li></li>
+                      <li></li>
+                    </ul>
+                  </div>
+                  <div class="itext"> 
+                    <div class="con-dess-lines_small">
+                      <p><strong>Организация (ВУЗ / ГНЦ): </strong>Национальный исследовательский Томский политехнический университет</p>
+                      <p><strong>Содержание: </strong>текст</p>
+                      <p><strong>Основные характеристики: </strong>текст</p>
+                      <p><strong>Порядок получения услуг: </strong>получение в собственность</p>
+                    </div>
+                  </div>
+                  <div class="tags"><a href="#" class="tags-item"><span class="name">Металлообратобка</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                  <div class="order-service"><a href="#" class="btn-orange">Заказать НТП</a></div>
+                  <div class="imeta">
+                    <div class="right mar-top-20m">
+                      <div class="comments"><a href="#">51</a></div>
+                      <div class="views"><a href="#">225</a></div>
+                    </div>
+                  </div>
                 </div>
               </div>
-              <div class="notify">
-                <div class="notify-prev"><img src="img/content/edit-page/1.png" alt=""></div>
-                <div class="notify-meta"> 
-                  <div class="date">13 октября 2014</div>
-                  <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
-                  <div class="cat">в разделе «Программное обеспечение»</div>
-                </div>
+            </div>
+          </div>
+          <div class="main-right">
+            <div class="box-right boxside-sort-cat">
+              <div class="bname">
+                <h3>Области применения</h3>
               </div>
-              <div class="notify">
-                <div class="notify-prev"><img src="img/content/edit-page/2.png" alt=""></div>
-                <div class="notify-meta"> 
-                  <div class="date">13 октября 2014</div>
-                  <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
-                  <div class="cat">в разделе «Программное обеспечение»</div>
-                </div>
+              <div class="bcon">
+                <ul>
+                  <li class="selected"><a href="#">Авиация и космос (10)</a></li>
+                  <li><a href="#">Безопасность (17)</a></li>
+                  <li><a href="#">Бизнес-консалтинг (1)</a></li>
+                  <li><a href="#">Биотехнологии и медицина (25)</a></li>
+                  <li><a href="#">Власть (31)</a></li>
+                  <li><a href="#">Добыча полезных ископаемых (4)</a></li>
+                  <li class="selected"><a href="#">ЖКХ (3)</a></li>
+                  <li><a href="#">Бизнес-консалтинг (1)</a></li>
+                  <li><a href="#">Биотехнологии и медицина (25)</a></li>
+                  <li><a href="#">Власть (31)</a></li>
+                  <li><a href="#">Добыча полезных ископаемых (4)</a></li>
+                  <li class="selected"><a href="#">ЖКХ (3)</a></li>
+                  <li><a href="#">Безопасность (17)</a></li>
+                  <li><a href="#">Бизнес-консалтинг (1)</a></li>
+                  <li><a href="#">Биотехнологии и медицина (25)</a></li>
+                  <li><a href="#">Власть (31)</a></li>
+                  <li><a href="#">Добыча полезных ископаемых (4)</a></li>
+                  <li class="selected"><a href="#">ЖКХ (3)</a></li>
+                  <li><a href="#">Бизнес-консалтинг (1)</a></li>
+                  <li><a href="#">Биотехнологии и медицина (25)</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="box-support">
+              <div class="bcon">
+                <div class="item"><a href="#"> <img src="img/content/logo-minprom.png" alt=""></a></div>
+                <div class="item"><a href="#"> <img src="img/content/logo-smr.png" alt=""></a></div>
+                <div class="item"><a href="#"> <img src="img/content/logo-ibs.png" alt=""></a></div>
               </div>
             </div>
           </div>
