--- a/site/results-item.html
+++ b/site/results-item.html
@@ -360,14 +360,21 @@
                 <li><a href="#">О проекте</a></li>
               </ul>
             </div>
-            <div class="user">
+            <div class="user js-usermenu">
               <div class="name"><a href="#"> 
                   <div class="title">Алексей Петров</div>
                   <div class="email">petrov.i1975@mail.ru</div></a></div>
               <div class="pic">
                 <div class="ava"><img src="img/content/ava-1.png" alt=""></div>
                 <div class="count"><a href="#">9</a></div>
+                <div class="arrow"></div>
               </div>
+              <ul class="user-drop js-usermenu-drop">
+                <li class="user-drop__link user-drop__link_work"><a href="#">Рабочая область</a></li>
+                <li class="user-drop__link user-drop__link_request"><a href="#">Заявки</a></li>
+                <li class="user-drop__link user-drop__link_messages"><a href="#">Сообщения</a></li>
+                <li class="user-drop__link user-drop__link_notifyc"><a href="#">Уведомления<span class="count"><i>9 </i></span></a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -392,11 +399,17 @@
                 <div class="event-item">
                   <div class="icon">
                     <h1 class="service-title">Эскизные проекты вариантов роторов низкого давления тихоходной турбины</h1>
-                    <p class="grey-without-strong"><strong>Исполнитель: </strong>НИОКР ОАО НПО «ЦНИИТМАШ»</p>
-                    <p class="grey-without-strong"><strong>Вид РИД: </strong>Секрет производства (<a href="#">ноу-хау</a>)</p>
-                    <p class="grey-without-strong"><strong>ФЦП: </strong>«Национальная технологическая база» на 2007-2011 годы</p>
-                    <p class="grey-without-strong"><strong>Охранный документ: </strong>в процессе регистрации<a href="#" class="updade-black"></a></p>
-                    <p class="grey-without-strong"><strong>Стоимость передачи РИД: </strong>240 000 рублей</p>
+                    <div class="tags"><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a><a href="#" class="tags-item"><span class="name">Металлообработка</span><span class="count">388</span></a></div>
+                    <div class="con-dess-lines">
+                      <p><strong>Вид РИД: </strong><a href="#">Изображение</a></p>
+                      <p><strong>Исполнитель: </strong>Способ измерения модуля упругости кольцевых образцов (деталей), в основу которого положено измерение деформации при фиксированной нагрузке</p>
+                      <p><strong>Охранный документ: </strong>Патент</p>
+                      <p><strong>Номер охранного документа: </strong>№3421701 от 10.12.2011</p>
+                      <p><strong>Правообладатель: </strong>Промстройинжиниринг</p>
+                      <p><strong>ФЦП: </strong>«Национальная технологическая база» на 2007-2011 годы</p>
+                      <p><strong>Охранный документ: </strong>в процессе регистрации<a href="#" class="updade-black"></a></p>
+                      <p><strong>Стоимость передачи РИД: </strong>240 000 рублей</p>
+                    </div>
                   </div>
                 </div>
               </div>
