--- a/site/lk-new.html
+++ b/site/lk-new.html
@@ -12,10 +12,12 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/sweet-alert.css" rel="stylesheet">
+    <link href="css/jquery.remodal.css" rel="stylesheet">
     <!-- Scripts-->
     <script src="js/sweet-alert.min.js" type="text/javascript"></script>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
+    <script src="js/jquery.remodal.js" type="text/javascript"></script>
     <script src="js/functions.js" type="text/javascript"></script>
   </head>
   <body>
@@ -360,14 +362,130 @@
                 <li><a href="#">О проекте</a></li>
               </ul>
             </div>
-            <div class="user">
+            <div class="user js-usermenu">
               <div class="name"><a href="#"> 
                   <div class="title">Алексей Петров</div>
                   <div class="email">petrov.i1975@mail.ru</div></a></div>
               <div class="pic">
                 <div class="ava"><img src="img/content/ava-1.png" alt=""></div>
                 <div class="count"><a href="#">9</a></div>
+                <div class="arrow"></div>
               </div>
+              <ul class="user-drop js-usermenu-drop">
+                <li class="user-drop__link user-drop__link_work"><a href="#">Рабочая область</a></li>
+                <li class="user-drop__link user-drop__link_request"><a href="#">Заявки</a></li>
+                <li class="user-drop__link user-drop__link_messages"><a href="#">Сообщения</a></li>
+                <li class="user-drop__link user-drop__link_notifyc"><a href="#">Уведомления<span class="count"><i>9 </i></span></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div data-remodal-id="remodal-add-ok" class="remodal">
+          <div class="order-accept">
+            <div class="order-accept__name">Заявка № 2123423</div>
+            <div class="order-accept__text">
+              <p><strong>Ваша заявка на добавление нового оборудования принята. <br></strong>Группа мониторинга рассмотрит ее и примет решение о публикации на портале. <br></p>
+              <p>За ходом рассмотрения Вы можете следить в разделе меню <a href="#">«Заявки».</a></p>
+              <p>&nbsp;</p><a href="#" class="btn-orange-wide inline">Согласен</a>
+            </div>
+          </div>
+        </div>
+        <div data-remodal-id="popedit" class="remodal">
+          <div class="popedit">
+            <div class="popedit__name">Новое оборудование</div>
+            <div class="popedit__form">
+              <div class="lineedit">
+                <div class="lineedit__name">Название<span class="req">*</span></div>
+                <div class="lineedit__con">
+                  <input type="text" placeholder="" value="Станок токарный с ЧПУ" class="inp-field inp-field_500">
+                </div>
+              </div>
+              <div class="lineedit">
+                <div class="lineedit__name">Модель</div>
+                <div class="lineedit__con">
+                  <input type="text" placeholder="" value="DELTAMAB 400" class="inp-field inp-field_500">
+                </div>
+              </div>
+              <div class="lineedit">
+                <div class="lineedit__name">Свойства<span class="req">*</span></div>
+                <div class="lineedit__con">
+                  <input type="text" placeholder="" value="Отличные" class="inp-field inp-field_full">
+                </div>
+              </div>
+              <div class="lineedit">
+                <div class="lineedit__name">Описание<span class="req">*</span></div>
+                <div class="lineedit__con">
+                  <textarea placeholder="" class="text-field text-field_full">Прецизионный токарный станок с ЧПУ выполнен по прогрессивной схеме компоновки с расположением револьверной головки на наклонных направляющих, что увеличивает жесткость конструкции, позволяет уменьшить размеры станка по ширине и оптимально распределить по направляющим нагрузки, образующиеся в процессе резания. </textarea>
+                </div>
+              </div>
+              <div class="lineedit">
+                <div class="lineedit__name">Основные характеристики</div>
+                <div class="lineedit__con">
+                  <textarea placeholder="" class="text-field text-field_full">Наибольший диаметр обрабатываемого изделия — 600 мм. Число управляемых координат — 2</textarea>
+                </div>
+              </div>
+              <div class="lineedit">
+                <div class="lineedit__name">Производитель</div>
+                <div class="lineedit__con">
+                  <input type="text" placeholder="" value="SOMAB, Франция" class="inp-field inp-field_360">
+                </div>
+              </div>
+              <div class="lineedit">
+                <div class="lineedit__name">Год</div>
+                <div class="lineedit__con">
+                  <input type="text" placeholder="" value="2012" class="inp-field inp-field_70">
+                </div>
+              </div>
+              <div class="lineedit">
+                <div class="lineedit__name">Состояние</div>
+                <div class="lineedit__con_pad-left">
+                  <input id="radio-s-1" type="radio" name="radio" checked class="inp-radio">
+                  <label for="radio-s-1">Новый</label>
+                  <input id="radio-s-2" type="radio" name="radio" class="inp-radio">
+                  <label for="radio-s-2">Поддержанный</label>
+                  <input id="radio-s-3" type="radio" name="radio" class="inp-radio">
+                  <label for="radio-s-3">Старый</label>
+                </div>
+              </div>
+              <div class="lineedit">
+                <div class="lineedit__name">Порядок предоставления услуг по доступу к оборудованию<span class="req"></span></div>
+                <div class="lineedit__con_pad-left">
+                  <input id="radio-p-1" type="radio" name="radio" checked class="inp-radio">
+                  <label for="radio-p-1">Передача в собственность</label>
+                  <input id="radio-p-2" type="radio" name="radio" class="inp-radio">
+                  <label for="radio-p-2">Аренда</label>
+                </div>
+              </div>
+              <div class="lineedit">
+                <div class="lineedit__name">Организация (ВУЗ, ГНЦ)</div>
+                <div class="lineedit__con">
+                  <input type="text" placeholder="" value="Национальный исследовательский Томский политехнический институт" class="inp-field inp-field_full">
+                </div>
+              </div>
+              <div class="lineedit">
+                <div class="lineedit__name">Область применения</div>
+                <div class="lineedit__con">
+                  <input type="text" placeholder="" value="Машиностроение Металлообработка" class="inp-field inp-field_500">
+                  <div class="desc">укажите через пробел</div>
+                </div>
+              </div>
+              <div class="lineedit">
+                <div class="lineedit__name">Изображение</div>
+                <div class="lineedit__con">
+                  <div class="formgroup articles__edit-images">
+                    <ul class="articles__edit-images-list inline">
+                      <li class="articles__edit-images-list-item"><img src="img/content/edit-page/1.png" alt="">
+                        <div class="articles__edit-images-list-item--edit"></div>
+                      </li>
+                      <li class="articles__edit-images-list-item--add">
+                        <div class="articles__edit-images-list-item--add-icon"></div>
+                        <div class="articles__edit-images-list-item--add-text">добавить изображение</div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="lineedit_save"><a href="#" class="btn-orange-wide inline edit-save">Сохранить</a></div>
             </div>
           </div>
         </div>
@@ -406,10 +524,11 @@
             </div>
           </div>
           <div class="main-full">
+            <p><a href="#remodal-add-ok">Открыть окно подтверждения</a></p>
             <div class="box-info">
               <div class="box">
                 <div class="bname">
-                  <h3> <a href="#">Оборудование</a></h3>
+                  <h3><a href="#">Оборудование</a></h3>
                 </div>
                 <div class="bcon bcon--padding">
                   <div class="col-3_border">
@@ -454,7 +573,7 @@
                     </div>
                   </div>
                   <div class="col-3_sep"></div>
-                  <div class="col-3_border item-adder"><a href="#" class="item-adder--link">+ <br>Добавить оборудование																	</a></div>
+                  <div class="col-3_border item-adder"><a href="#popedit" class="item-adder--link">+ <br>Добавить оборудование																	</a></div>
                   <div class="clear"></div>
                   <div class="all_full"><a href="#">Все оборудование</a></div>
                   <div class="sep_full"></div>
@@ -505,7 +624,7 @@
                     </div>
                   </div>
                   <div class="col-3_sep"></div>
-                  <div class="col-3_border item-adder"><a href="#" class="item-adder--link">+ <br>Добавить услугу</a></div>
+                  <div class="col-3_border item-adder"><a href="#popedit" class="item-adder--link">+ <br>Добавить услугу</a></div>
                   <div class="clear"></div>
                   <div class="all_full"><a href="#">Все услуги</a></div>
                   <div class="sep_full"></div>
@@ -556,7 +675,58 @@
                     </div>
                   </div>
                   <div class="col-3_sep"></div>
-                  <div class="col-3_border item-adder"><a href="#" class="item-adder--link">+ <br>Добавить программное обеспечение</a></div>
+                  <div class="col-3_border item-adder"><a href="#popedit" class="item-adder--link">+ <br>Добавить программное обеспечение</a></div>
+                  <div class="clear"></div>
+                  <div class="all_full"><a href="#">Все программы</a></div>
+                  <div class="sep_full"></div>
+                </div>
+              </div>
+              <div class="box">
+                <div class="bname">
+                  <h3> <a href="#">Объекты научно-технического потенциала</a></h3>
+                </div>
+                <div class="bcon bcon--padding">
+                  <div class="col-3_border">
+                    <div class="item item--edit">
+                      <ul class="admin-box--columnpad">
+                        <li class="admin-edit"></li>
+                        <li class="admin-delete"></li>
+                      </ul>
+                      <div class="iname"><a href="#">Автолаборатория для проведения энергетического обследования на базе ГАЗ-27527 </a></div>
+                      <div class="itext">Предназначена для исследования эксплуатационных характеристик продуктивных пластов <br><br><a href="#" class="link-orange">ТюмГНГУ</a></div>
+                      <div class="irating"><span>Рейтинг</span>
+                        <ul>
+                          <li class="star"></li>
+                          <li class="star"></li>
+                          <li class="star"></li>
+                          <li></li>
+                          <li></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-3_sep"></div>
+                  <div class="col-3_border">
+                    <div class="item item--edit">
+                      <ul class="admin-box--columnpad">
+                        <li class="admin-edit"></li>
+                        <li class="admin-delete"></li>
+                      </ul>
+                      <div class="iname"><a href="#">Автоматизированное рабочее место конструктора АРМК </a></div>
+                      <div class="itext">Для проектирования и моделирования МКА <br><br><a href="#" class="link-orange">ЮЗГУ</a></div>
+                      <div class="irating"><span>Рейтинг</span>
+                        <ul>
+                          <li class="star"></li>
+                          <li class="star"></li>
+                          <li class="star"></li>
+                          <li></li>
+                          <li></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-3_sep"></div>
+                  <div class="col-3_border item-adder"><a href="#popedit" class="item-adder--link">+ <br>Добавить <br> объект НТП</a></div>
                   <div class="clear"></div>
                   <div class="all_full"><a href="#">Все программы</a></div>
                   <div class="sep_full"></div>
@@ -603,7 +773,7 @@
                     </div>
                   </div>
                   <div class="col-3_sep"></div>
-                  <div class="col-3_border item-adder"><a href="#" class="item-adder--link">+ <br>Добавить потребность</a></div>
+                  <div class="col-3_border item-adder"><a href="#popedit" class="item-adder--link">+ <br>Добавить потребность</a></div>
                   <div class="clear"></div>
                   <div class="all_full"><a href="#">Все потребности</a></div>
                 </div>
@@ -627,7 +797,7 @@
                     <p><b>Охранный документ:</b>Патент №2481822 от 21.02.2012</p>
                   </div>
                 </div>
-                <div class="item-adder"><a href="#" class="item-adder--link">+ Добавить результат интеллектуальной деятельности</a></div>
+                <div class="item-adder"><a href="#popedit" class="item-adder--link">+ Добавить результат интеллектуальной деятельности</a></div>
                 <div class="clear"></div>
                 <div class="all_full"><a href="#">Все результаты</a></div>
               </div>
@@ -682,7 +852,7 @@
                   </div>
                 </div>
               </div>
-              <div class="item-adder"><a href="#" class="item-adder--link">+ Добавить обсуждение</a></div>
+              <div class="item-adder"><a href="#popedit" class="item-adder--link">+ Добавить обсуждение</a></div>
               <div class="clear">
                 <div class="all_full"><a href="#">Все обсуждения</a></div>
               </div>
@@ -717,7 +887,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="item-adder"><a href="#" class="item-adder--link">+ Добавить событие</a></div>
+                <div class="item-adder"><a href="#popedit" class="item-adder--link">+ Добавить событие</a></div>
                 <div class="clear">
                   <div class="all_full"><a href="#">Все события</a></div>
                 </div>
@@ -742,7 +912,7 @@
                       <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
                     </div>
                   </div>
-                  <div class="item-adder"><a href="#" class="item-adder--link">+ Добавить документ</a></div>
+                  <div class="item-adder"><a href="#popedit" class="item-adder--link">+ Добавить документ</a></div>
                   <div class="clear"></div>
                   <div class="all_full"><a href="#">Все документы</a></div>
                 </div>
