--- a/site/ntp-item.html
+++ b/site/ntp-item.html
@@ -382,58 +382,253 @@
         <div class="main-width main-wrap">
           <div class="pathway">
             <ul>
-              <li><a href="#">Уведомления</a></li>
+              <li><a href="#">РЫНОК УСЛУГ</a></li>
+              <li>></li>
+              <li><a href="#">объекты нтп</a></li>
             </ul>
           </div>
-          <div class="main-full">
-            <div class="notifybox">
-              <div class="notify">
-                <div class="notify-prev"><img src="img/content/edit-page/1.png" alt=""></div>
-                <div class="notify-meta"> 
-                  <div class="date">13 октября 2014</div>
-                  <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
-                  <div class="cat">в разделе «Программное обеспечение»</div>
+          <div class="main-left">
+            <div class="box-text-item">
+              <div class="bmeta">
+                <div class="date">19 сентября 2014 года</div>
+                <div class="comments"><a href="#">61</a></div>
+                <div class="views">2726</div>
+              </div>
+              <div class="bcon bcon-text-style">
+                <div class="event-item mar-bot-30">
+                  <div class="icon">
+                    <h1 class="service-title">Автолаборатория для проведения энергетического обследования на базе ГАЗ-27527</h1>
+                    <div class="irating mar-bot-10 irating-service">
+                      <ul>
+                        <li class="star"></li>
+                        <li class="star"></li>
+                        <li class="star"></li>
+                        <li class="star"></li>
+                        <li></li>
+                      </ul>
+                    </div>
+                    <div class="tags"><a href="#" class="tags-item"><span class="name">Круглый стол</span><span class="count empty"></span></a><a href="#" class="tags-item"><span class="name">Металлообработка</span><span class="count">388</span></a></div>
+                  </div>
+                  <div class="iprev"><img src="img/content/180-135-3.jpg" alt=""></div>
+                  <div class="con-dess-lines">
+                    <p><strong>Организация (ВУЗ / ГНЦ): </strong>Национальный исследовательский Томский политехнический университет</p>
+                    <p><strong>Содержание: </strong>текст</p>
+                    <p><strong>Основные характеристики: </strong>текст</p>
+                    <p><strong>Порядок получения услуг: </strong>получение в собственность</p>
+                  </div>
                 </div>
               </div>
-              <div class="notify">
-                <div class="notify-prev"><img src="img/content/edit-page/2.png" alt=""></div>
-                <div class="notify-meta"> 
-                  <div class="date">13 октября 2014</div>
-                  <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
-                  <div class="cat">в разделе «Программное обеспечение»</div>
+              <div class="order-service-cont"><a href="#" class="btn-orange inline">Заказать НТП</a><a href="#" class="btn-grey-dashed js-show-contacts">Показать контакты</a>
+                <div class="contacts js-contacts-box"><span class="phone">+7 495 675 87 98</span><span class="email"><a href="#">email@email.com</a></span></div>
+              </div>
+              <div class="bmetabot">
+                <div class="share"><span>Поделиться</span>
+                  <ul>
+                    <li class="vk"><a href="#"></a></li>
+                    <li class="fb"><a href="#"></a></li>
+                    <li class="tw"><a href="#"></a></li>
+                    <li class="in"><a href="#"></a></li>
+                  </ul>
+                </div>
+                <div class="comments-count"><a href="#" class="btn-grey">19 комментариев</a></div>
+              </div>
+              <div class="box-interest">
+                <div class="bname">
+                  <h3>Похожие объекты НТП</h3>
+                </div>
+                <div class="bcon">
+                  <div class="box-articles m-mod">
+                    <div class="item">
+                      <div class="iprev"><img src="img/content/180-135-4.jpg" alt=""/></div>
+                      <div class="icon">
+                        <div class="iname"><a href="#">Автолаборатория для проведения энергетического обследования на базе ГАЗ-27527</a></div>
+                        <div class="irating mar-bot-10">
+                          <ul>
+                            <li class="star"></li>
+                            <li class="star"></li>
+                            <li class="star"></li>
+                            <li></li>
+                            <li></li>
+                          </ul>
+                        </div>
+                        <div class="itext"> 
+                          <div class="con-dess-lines_small">
+                            <p><strong>Организация (ВУЗ / ГНЦ): </strong>Национальный исследовательский Томский политехнический университет</p>
+                            <p><strong>Содержание: </strong>текст</p>
+                            <p><strong>Основные характеристики: </strong>текст</p>
+                            <p><strong>Порядок получения услуг: </strong>получение в собственность</p>
+                          </div>
+                        </div>
+                        <div class="tags"><a href="#" class="tags-item"><span class="name">Металлообратобка</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                        <div class="order-service"><a href="#" class="btn-orange">Заказать НТП</a></div>
+                        <div class="imeta">
+                          <div class="right mar-top-20m">
+                            <div class="comments"><a href="#">51</a></div>
+                            <div class="views"><a href="#">225</a></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="item">
+                      <div class="iprev"><img src="img/content/180-135-3.jpg" alt=""/></div>
+                      <div class="icon">
+                        <div class="iname"><a href="#">Автомат установки компонентов: АРС L40 </a></div>
+                        <div class="irating mar-bot-10">
+                          <ul>
+                            <li class="star"></li>
+                            <li class="star"></li>
+                            <li class="star"></li>
+                            <li></li>
+                            <li></li>
+                          </ul>
+                        </div>
+                        <div class="itext"> 
+                          <div class="con-dess-lines_small">
+                            <p><strong>Организация (ВУЗ / ГНЦ): </strong>Национальный исследовательский Томский политехнический университет</p>
+                            <p><strong>Содержание: </strong>текст</p>
+                            <p><strong>Основные характеристики: </strong>текст</p>
+                            <p><strong>Порядок получения услуг: </strong>получение в собственность</p>
+                          </div>
+                        </div>
+                        <div class="tags"><a href="#" class="tags-item"><span class="name">Металлообратобка</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                        <div class="order-service"><a href="#" class="btn-orange">Заказать НТП</a></div>
+                        <div class="imeta">
+                          <div class="right mar-top-20m">
+                            <div class="comments"><a href="#">51</a></div>
+                            <div class="views"><a href="#">225</a></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
-              <div class="notify">
-                <div class="notify-prev"><img src="img/content/edit-page/1.png" alt=""></div>
-                <div class="notify-meta"> 
-                  <div class="date">13 октября 2014</div>
-                  <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
-                  <div class="cat">в разделе «Программное обеспечение»</div>
+              <div class="box-comments">
+                <div class="bwrite">
+                  <div class="bname">
+                    <h3>Комментарии к статье</h3><a href="#enter-popup">Войти</a>
+                  </div>
+                  <div class="bcon">
+                    <div class="ava"><img src="img/ava.png" alt=""/></div>
+                    <div class="text">
+                      <textarea placeholder=""></textarea>
+                    </div>
+                    <div class="action"><a href="#" class="btn-orange">Оставить комментарий</a></div>
+                  </div>
+                </div>
+                <div class="bcomments">
+                  <div class="comment">
+                    <div class="cprev"><a href="#"> <img src="img/content/ava-2.jpg" alt=""/></a></div>
+                    <div class="ccon">
+                      <div class="name"><a href="#">Konrad Karlovich</a>
+                        <div class="date">1 час назад</div>
+                      </div>
+                      <div class="text">Я эту штуку не куплю. Работаю с Microsoft Office -- он умнее, чем я.</div>
+                      <div class="answer"><a href="#">Ответить</a></div>
+                    </div>
+                    <div class="comment">
+                      <div class="cprev"><a href="#"> <img src="img/content/ava-2.jpg" alt=""/></a></div>
+                      <div class="ccon">
+                        <div class="name"><a href="#">Konrad Karlovich</a>
+                          <div class="pep">
+                             
+                             > <a href="#">Влодко Чорный</a>
+                          </div>
+                          <div class="date">1 час назад</div>
+                        </div>
+                        <div class="text">Кто вам сказал, что Surface 2 провал? Вполне нормально берут, конкурентов с таким функционалом просто нет в этом сегменте.</div>
+                        <div class="answer"><a href="#">Ответить</a></div>
+                      </div>
+                      <div class="comment">
+                        <div class="cprev"><a href="#"> <img src="img/ava.png" alt=""/></a></div>
+                        <div class="ccon">
+                          <div class="name"><a href="#">Konrad Karlovich</a>
+                            <div class="date">1 час назад</div>
+                          </div>
+                          <div class="text">Из всего перечня именитых контор Мелкомягкие дали фору абсолютно всем, посмотрели на представленный продукт.</div>
+                          <div class="answer"><a href="#">Ответить</a></div>
+                        </div>
+                        <div class="comment">
+                          <div class="cprev"><a href="#"> <img src="img/content/ava-1.png" alt=""/></a></div>
+                          <div class="ccon">
+                            <div class="name"><a href="#">Konrad Karlovich</a>
+                              <div class="date">1 час назад</div>
+                            </div>
+                            <div class="text">Кто вам сказал, что Surface 2 провал? Вполне нормально берут, конкурентов с таким функционалом просто нет в этом сегменте.</div>
+                            <div class="answer"><a href="#">Ответить</a></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="comment">
+                    <div class="cprev"><a href="#"> <img src="img/ava.png" alt=""/></a></div>
+                    <div class="ccon">
+                      <div class="name"><a href="#">Konrad Karlovich</a>
+                        <div class="date">1 час назад</div>
+                      </div>
+                      <div class="text">Из всего перечня именитых контор Мелкомягкие дали фору абсолютно всем, посмотрели на представленный продукт.</div>
+                      <div class="answer"><a href="#">Ответить</a></div>
+                    </div>
+                  </div>
+                  <div class="comment">
+                    <div class="cprev"><a href="#"> <img src="img/content/ava-1.png" alt=""/></a></div>
+                    <div class="ccon">
+                      <div class="name"><a href="#">Konrad Karlovich</a>
+                        <div class="date">1 час назад</div>
+                      </div>
+                      <div class="text">Кто вам сказал, что Surface 2 провал? Вполне нормально берут, конкурентов с таким функционалом просто нет в этом сегменте.</div>
+                      <div class="answer"><a href="#">Ответить</a></div>
+                    </div>
+                  </div>
                 </div>
               </div>
-              <div class="notify">
-                <div class="notify-prev"><img src="img/content/edit-page/2.png" alt=""></div>
-                <div class="notify-meta"> 
-                  <div class="date">13 октября 2014</div>
-                  <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
-                  <div class="cat">в разделе «Программное обеспечение» </div>
+            </div>
+          </div>
+          <div class="main-right">
+            <div class="box-news box-right box-news_dotted">
+              <div class="bname">
+                <h3> <a href="#">Похожие события</a></h3>
+              </div>
+              <div class="bcon">
+                <div class="item">
+                  <div class="idate">30 Сентября</div>
+                  <div class="iname"> <a href="#">Выставка научного оборудования НИИ спорта РГУФКСМиТ</a></div>
+                  <div class="itext">10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования.</div>
+                  <div class="tags"><a href="#" class="tags-item"><span class="name">Круглый стол</span><span class="count empty"></span></a></div>
+                  <div class="address-date">
+                    <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
+                    <div class="ad-date">27, 28 октября - с 14.00<br>29, 30 октября - с 10.00</div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="idate">18 Сентября</div>
+                  <div class="iname"> <a href="#">Ивановский государственный политехнический университет</a></div>
+                  <div class="itext">10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования.</div>
+                  <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">45</span></a></div>
+                  <div class="address-date">
+                    <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
+                    <div class="ad-date">27, 28 октября - с 14.00<br>29, 30 октября - с 10.00</div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="idate">30 Сентября</div>
+                  <div class="iname"> <a href="#">Ученые объяснили смертельную </a></div>
+                  <div class="itext">10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования.</div>
+                  <div class="tags"><a href="#" class="tags-item"><span class="name">Круглый стол</span><span class="count empty"></span></a></div>
+                  <div class="address-date">
+                    <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
+                    <div class="ad-date">27, 28 октября - с 14.00<br>29, 30 октября - с 10.00</div>
+                  </div>
                 </div>
               </div>
-              <div class="notify">
-                <div class="notify-prev"><img src="img/content/edit-page/1.png" alt=""></div>
-                <div class="notify-meta"> 
-                  <div class="date">13 октября 2014</div>
-                  <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
-                  <div class="cat">в разделе «Программное обеспечение»</div>
-                </div>
-              </div>
-              <div class="notify">
-                <div class="notify-prev"><img src="img/content/edit-page/2.png" alt=""></div>
-                <div class="notify-meta"> 
-                  <div class="date">13 октября 2014</div>
-                  <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
-                  <div class="cat">в разделе «Программное обеспечение»</div>
-                </div>
+              <div class="ball"><a href="#">Все новости</a></div>
+            </div>
+            <div class="box-support">
+              <div class="bcon">
+                <div class="item"><a href="#"> <img src="img/content/logo-minprom.png" alt=""/></a></div>
+                <div class="item"><a href="#"> <img src="img/content/logo-smr.png" alt=""/></a></div>
+                <div class="item"><a href="#"> <img src="img/content/logo-ibs.png" alt=""/></a></div>
               </div>
             </div>
           </div>
