--- a/site/results.html
+++ b/site/results.html
@@ -361,14 +361,21 @@
                 <li><a href="#">О проекте</a></li>
               </ul>
             </div>
-            <div class="user">
+            <div class="user js-usermenu">
               <div class="name"><a href="#"> 
                   <div class="title">Алексей Петров</div>
                   <div class="email">petrov.i1975@mail.ru</div></a></div>
               <div class="pic">
                 <div class="ava"><img src="img/content/ava-1.png" alt=""></div>
                 <div class="count"><a href="#">9</a></div>
+                <div class="arrow"></div>
               </div>
+              <ul class="user-drop js-usermenu-drop">
+                <li class="user-drop__link user-drop__link_work"><a href="#">Рабочая область</a></li>
+                <li class="user-drop__link user-drop__link_request"><a href="#">Заявки</a></li>
+                <li class="user-drop__link user-drop__link_messages"><a href="#">Сообщения</a></li>
+                <li class="user-drop__link user-drop__link_notifyc"><a href="#">Уведомления<span class="count"><i>9 </i></span></a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -398,86 +405,94 @@
                      
                     Названию организации<span> </span></a></div>
               </div>
-              <div class="item">
-                <div class="icon">
-                  <div class="iname"><a href="#">Эскизные проекты вариантов роторов низкого давления тихоходной турбины <br>мощностью выше 1200 МВт с двумя ЦНД</a></div>
-                  <div class="itext lh-small black-strong">
-                    <p>Изготовление деталей типа тел вращения</p>
-                    <p><strong>Исполнитель: </strong>НИОКР ОАО НПО «ЦНИИТМАШ»</p>
-                    <p><strong>Вид РИД: </strong>Секрет производства (<a href="#">ноу-хау</a>)</p>
-                    <p><strong>ФЦП: </strong>«Национальная технологическая база» на 2007-2011 годы</p>
-                    <p><strong>Охранный документ: </strong>в процессе регистрации<a href="#" class="updade-black"></a></p>
-                    <p><strong>Стоимость передачи РИД: </strong>240 000 рублей</p>
-                  </div>
-                  <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
-                  <div class="imeta">
-                    <div class="right mar-top-20m">
-                      <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="icon">
-                  <div class="iname"><a href="#">Эскизные проекты вариантов роторов низкого давления тихоходной турбины <br>мощностью выше 1200 МВт с двумя ЦНД</a></div>
-                  <div class="itext lh-small black-strong">
-                    <p>Изготовление деталей типа тел вращения</p>
-                    <p><strong>Исполнитель: </strong>НИОКР ОАО НПО «ЦНИИТМАШ»</p>
-                    <p><strong>Вид РИД: </strong>Секрет производства (<a href="#">ноу-хау</a>)</p>
-                    <p><strong>ФЦП: </strong>«Национальная технологическая база» на 2007-2011 годы</p>
-                    <p><strong>Охранный документ: </strong>в процессе регистрации<a href="#" class="updade-black"></a></p>
-                    <p><strong>Стоимость передачи РИД: </strong>240 000 рублей</p>
-                  </div>
-                  <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
-                  <div class="imeta">
-                    <div class="right mar-top-20m">
-                      <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="icon">
-                  <div class="iname"><a href="#">Эскизные проекты вариантов роторов низкого давления тихоходной турбины <br>мощностью выше 1200 МВт с двумя ЦНД</a></div>
-                  <div class="itext lh-small black-strong">
-                    <p>Изготовление деталей типа тел вращения</p>
-                    <p><strong>Исполнитель: </strong>НИОКР ОАО НПО «ЦНИИТМАШ»</p>
-                    <p><strong>Вид РИД: </strong>Секрет производства (<a href="#">ноу-хау</a>)</p>
-                    <p><strong>ФЦП: </strong>«Национальная технологическая база» на 2007-2011 годы</p>
-                    <p><strong>Охранный документ: </strong>в процессе регистрации<a href="#" class="updade-black"></a></p>
-                    <p><strong>Стоимость передачи РИД: </strong>240 000 рублей</p>
-                  </div>
-                  <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
-                  <div class="imeta">
-                    <div class="right mar-top-20m">
-                      <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="icon">
-                  <div class="iname"><a href="#">Эскизные проекты вариантов роторов низкого давления тихоходной турбины <br>мощностью выше 1200 МВт с двумя ЦНД</a></div>
-                  <div class="itext lh-small black-strong">
-                    <p>Изготовление деталей типа тел вращения</p>
-                    <p><strong>Исполнитель: </strong>НИОКР ОАО НПО «ЦНИИТМАШ»</p>
-                    <p><strong>Вид РИД: </strong>Секрет производства (<a href="#">ноу-хау</a>)</p>
-                    <p><strong>ФЦП: </strong>«Национальная технологическая база» на 2007-2011 годы</p>
-                    <p><strong>Охранный документ: </strong>в процессе регистрации<a href="#" class="updade-black"></a></p>
-                    <p><strong>Стоимость передачи РИД: </strong>240 000 рублей</p>
-                  </div>
-                  <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
-                  <div class="imeta">
-                    <div class="right mar-top-20m">
-                      <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+                            <div class="item">
+                              <div class="icon">
+                                <div class="iname"><a href="#">Эскизные проекты вариантов роторов низкого давления тихоходной турбины <br>мощностью выше 1200 МВт с двумя ЦНД</a></div>
+                                <div class="itext lh-small black-strong">
+                                  <p><strong>Вид РИД: </strong><a href="#">Изображение</a></p>
+                                  <p><strong>Исполнитель: </strong>Способ измерения модуля упругости кольцевых образцов (деталей), в основу которого положено измерение деформации при фиксированной нагрузке</p>
+                                  <p><strong>Охранный документ: </strong>Патент</p>
+                                  <p><strong>Номер охранного документа: </strong>№3421701 от 10.12.2011</p>
+                                  <p><strong>Правообладатель: </strong>Промстройинжиниринг</p>
+                                  <p><strong>ФЦП: </strong>«Национальная технологическая база» на 2007-2011 годы</p>
+                                  <p><strong>Охранный документ: </strong>в процессе регистрации<a href="#" class="updade-black"></a></p>
+                                  <p><strong>Стоимость передачи РИД: </strong>240 000 рублей</p>
+                                </div>
+                                <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                                <div class="imeta">
+                                  <div class="right mar-top-20m">
+                                    <div class="comments"><a href="#">51</a></div>
+                                    <div class="views"><a href="#">225</a></div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="item">
+                              <div class="icon">
+                                <div class="iname"><a href="#">Эскизные проекты вариантов роторов низкого давления тихоходной турбины <br>мощностью выше 1200 МВт с двумя ЦНД</a></div>
+                                <div class="itext lh-small black-strong">
+                                  <p><strong>Вид РИД: </strong><a href="#">Изображение</a></p>
+                                  <p><strong>Исполнитель: </strong>Способ измерения модуля упругости кольцевых образцов (деталей), в основу которого положено измерение деформации при фиксированной нагрузке</p>
+                                  <p><strong>Охранный документ: </strong>Патент</p>
+                                  <p><strong>Номер охранного документа: </strong>№3421701 от 10.12.2011</p>
+                                  <p><strong>Правообладатель: </strong>Промстройинжиниринг</p>
+                                  <p><strong>ФЦП: </strong>«Национальная технологическая база» на 2007-2011 годы</p>
+                                  <p><strong>Охранный документ: </strong>в процессе регистрации<a href="#" class="updade-black"></a></p>
+                                  <p><strong>Стоимость передачи РИД: </strong>240 000 рублей</p>
+                                </div>
+                                <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                                <div class="imeta">
+                                  <div class="right mar-top-20m">
+                                    <div class="comments"><a href="#">51</a></div>
+                                    <div class="views"><a href="#">225</a></div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="item">
+                              <div class="icon">
+                                <div class="iname"><a href="#">Эскизные проекты вариантов роторов низкого давления тихоходной турбины <br>мощностью выше 1200 МВт с двумя ЦНД</a></div>
+                                <div class="itext lh-small black-strong">
+                                  <p><strong>Вид РИД: </strong><a href="#">Изображение</a></p>
+                                  <p><strong>Исполнитель: </strong>Способ измерения модуля упругости кольцевых образцов (деталей), в основу которого положено измерение деформации при фиксированной нагрузке</p>
+                                  <p><strong>Охранный документ: </strong>Патент</p>
+                                  <p><strong>Номер охранного документа: </strong>№3421701 от 10.12.2011</p>
+                                  <p><strong>Правообладатель: </strong>Промстройинжиниринг</p>
+                                  <p><strong>ФЦП: </strong>«Национальная технологическая база» на 2007-2011 годы</p>
+                                  <p><strong>Охранный документ: </strong>в процессе регистрации<a href="#" class="updade-black"></a></p>
+                                  <p><strong>Стоимость передачи РИД: </strong>240 000 рублей</p>
+                                </div>
+                                <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                                <div class="imeta">
+                                  <div class="right mar-top-20m">
+                                    <div class="comments"><a href="#">51</a></div>
+                                    <div class="views"><a href="#">225</a></div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="item">
+                              <div class="icon">
+                                <div class="iname"><a href="#">Эскизные проекты вариантов роторов низкого давления тихоходной турбины <br>мощностью выше 1200 МВт с двумя ЦНД</a></div>
+                                <div class="itext lh-small black-strong">
+                                  <p><strong>Вид РИД: </strong><a href="#">Изображение</a></p>
+                                  <p><strong>Исполнитель: </strong>Способ измерения модуля упругости кольцевых образцов (деталей), в основу которого положено измерение деформации при фиксированной нагрузке</p>
+                                  <p><strong>Охранный документ: </strong>Патент</p>
+                                  <p><strong>Номер охранного документа: </strong>№3421701 от 10.12.2011</p>
+                                  <p><strong>Правообладатель: </strong>Промстройинжиниринг</p>
+                                  <p><strong>ФЦП: </strong>«Национальная технологическая база» на 2007-2011 годы</p>
+                                  <p><strong>Охранный документ: </strong>в процессе регистрации<a href="#" class="updade-black"></a></p>
+                                  <p><strong>Стоимость передачи РИД: </strong>240 000 рублей</p>
+                                </div>
+                                <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                                <div class="imeta">
+                                  <div class="right mar-top-20m">
+                                    <div class="comments"><a href="#">51</a></div>
+                                    <div class="views"><a href="#">225</a></div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
             </div>
           </div>
           <div class="main-right">
